# Build_x_264

./: README.md  build_x264.sh  build_x264_all.sh  config.sh  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/arm64-v8a/lib/pkgconfig/: x264.pc
app/src/main/java/com/jar/build_x_264/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
